# MandelbrotSet

./: CMakeLists.txt  README.md  dynamic_and_cyclic_scheduling.cpp  gpu_scheduling.cpp  main.cpp  mandelbrot  shader.frag  shader.vert
notebooks/: duration_depending_on_max_iter.ipynb  plot_parameter_sweeps.ipynb
output_data/: cyclic_parameter_sweep.csv  dynamic_parameter_sweep.csv  gpu_parameter_sweep.csv
output_data/images/: mandelbrot.ppm
